# payroll

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
TimeGAN/: data_loading.py  timegan.py  utils.py
TimeGAN/metrics/: discriminative_metrics.py  predictive_metrics.py  visualization_metrics.py
frontend/: index.ts
model_checkpoints/timegan/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-18_21-10-27/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-18_21-16-15/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-18_21-20-39/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-18_21-28-01/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-18_21-31-08/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-18_21-32-22/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-20_11-15-13/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-20_11-16-02/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-20_13-35-09/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-20_13-37-23/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-20_14-01-35/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/2025-08-20_15-19-41/: discriminator_epoch.keras  embedder_epoch.keras  generator_epoch.keras  recovery_epoch.keras  supervisor_epoch.keras
model_checkpoints/timegan/payroll/: discriminator_epoch.keras  embedder_epoch.keras  generated_data.pkl  generator_epoch.keras  (+3 more)
src/: pipeline.py  utils.py
src/database/: Lohnkonto2022-2025_english.csv  ts_long.csv
src/dataset/: __init__.py  base.py  base_test.py
src/dataset_preparation/: base.py  data_convert.py  generate_synthetic.py  timegan.py  visualize.py
src/model_database/: __init__.py  base.py
src/payroll/: __init__.py  llama.py  zero_shot.py
timesfm/: pyproject.toml
(+101 files in other folders)
