[tool.poetry]
name = "payroll-forecast"
version = "0.1.0"
description = ""
authors = ["Ellen <ellen.zhang@sage.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uv = ">=0.8.4,<0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.7"
isort = "^6.0.1"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
lint.ignore = ["C901", "E501", "E741", "F402", "F823"]
lint.select = ["C", "E", "F", "I", "W"]
extend-exclude = ["tsfm_public/_version.py"]
extend-include = ["*.ipynb"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["tsfm_public"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
